--- a/themes/straightforwardinginc/assets/sass/style.scss
+++ b/themes/straightforwardinginc/assets/sass/style.scss
@@ -25,3 +25,8 @@
 
 
 @import "vc/pom_bottom";
+
+@import "vc/service_feature";
+@import "vc/ribbon";
+@import "vc/app_display";
+@import "vc/book_system";
