--- a/themes/straightforwardinginc/assets/sass/vc/page_top.scss
+++ b/themes/straightforwardinginc/assets/sass/vc/page_top.scss
@@ -1,9 +1,12 @@
 #page_top .inner .right {
-    right:10%;
+    // right:10%;
 }
 #page_top .inner .right img{
-    max-height: 300px;
-    width: auto;    
+   //  max-height: 300px;
+   width: auto;
+   max-height: 430px;
+   margin: auto;
+   display: block;
 }
 
 
