--- a/themes/straightforwardinginc/assets/sass/page/page.scss
+++ b/themes/straightforwardinginc/assets/sass/page/page.scss
@@ -27,6 +27,7 @@
         justify-content: space-between;
         min-height: 700px;
     // align-items: center;
+        max-width: 1400px;;
 
             .left{
                 padding-top:130px;
@@ -49,7 +50,9 @@
             }
             .right{
                 padding-top:100px;
-                img{width:100%;}
+                img{
+                    width:100%;
+                }
             }
 
             .left{
@@ -57,11 +60,14 @@
                 z-index: 5;        
             }
             .right{    
-                position: absolute;
+               // position: absolute;
                 top: 100px;
-                max-width: 50%;
+                width: 50%;
                 right: 0;
                 z-index: 5;
+                img{
+                    width:100%;
+                }
             }    
     }
 }
