--- a/themes/straightforwardinginc/assets/sass/vc/career_sec1.scss
+++ b/themes/straightforwardinginc/assets/sass/vc/career_sec1.scss
@@ -1,9 +1,18 @@
 #career_sec1_layer1{
     margin-bottom: 150px;;
-   .inner{
+   > .inner{
        display: flex;
        justify-content: center;
        align-items: center;
+
+       &.text_center{
+           text-align: center;
+           .text{
+            max-width: none;
+            padding: 0 15px;
+           }
+       }
+
        .pic{
            padding-right: 50px;;
            img{
@@ -25,6 +34,7 @@
             line-height: 26px;
             letter-spacing: 0.8px;
             color:#454545;
+            
            }
        }
    }
@@ -39,7 +49,8 @@
         align-items: center;
         .infobox{
             text-align: center;
-            width: calc(33.333% - 33px);
+            width: calc(100% - 33px);
+            padding:0 20px;
             .pic{
                margin-bottom:30px;
                 img{
@@ -58,7 +69,8 @@
                     color:#195d8f;
                 }
                 .content{
-
+                    max-width: 360px;
+                    margin: auto;
                     font-size:16px;
                     line-height: 20px;;
                     letter-spacing: 1px;;
