--- a/themes/straightforwardinginc/assets/sass/style.scss
+++ b/themes/straightforwardinginc/assets/sass/style.scss
@@ -23,10 +23,18 @@
 @import "vc/career_bottom";
 @import "vc/career_sec1";
 
-
+@import "vc/pom_top";
+@import "vc/pom_center";
 @import "vc/pom_bottom";
 
 @import "vc/service_feature";
 @import "vc/ribbon";
 @import "vc/app_display";
 @import "vc/book_system";
+
+
+@import "vc/service_tracking_feature";
+@import "vc/service_tracking_center";
+@import "vc/service_tracking_testi";
+
+@import "lib/slider";
