--- a/themes/straightforwardinginc/assets/sass/tpl/rwd_menu.scss
+++ b/themes/straightforwardinginc/assets/sass/tpl/rwd_menu.scss
@@ -9,10 +9,12 @@
         
 
         .global_menu{
-            background-color: rgba(0, 0, 0, 0.9);
-            width:300px;
+            background-color: #d8f3f7;
+            width: 300px;
             height: 100vh;
-            padding-top:0px;
+            padding-top: 0px;
+            box-shadow: 0 0px 5px #9c9c9c;
+            
             .menu-menu-1-container{
                 padding:20px;
 
