--- a/themes/straightforwardinginc/assets/sass/tpl/button.scss
+++ b/themes/straightforwardinginc/assets/sass/tpl/button.scss
@@ -9,6 +9,7 @@
     justify-content: center;;
     align-items: center;
     letter-spacing: 0.9px;
+    padding: 0 20px;
     border:0px;
     &:after{
         height:5px;
@@ -28,6 +29,8 @@
         width:100%;
     }
 }
+
+
 
 .button.hwt{
     background-color:#fff;
